# paper-newsletter

./: .env.example  .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/paper-newsletter/: SKILL.md
.github/workflows/: daily.yml
commands/: customize.md  install.md  schedule.md  send.md
hooks/: hooks.json
skills/setup/: SKILL.md
src/: arxiv_client.py  config.py  email_sender.py  main.py  relevance_filter.py  semantic_scholar.py  slack_sender.py
