[project]
name = "paper-newsletter"
version = "0.2.1"
description = "Daily LLM agent paper newsletter → Gmail"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1",
    "httpx>=0.27",
    "google-genai>=1.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
paper-newsletter = "src.main:main"
